# Wedda

./: .ftpquota  .gitignore  manage.py  pyproject.toml  requirments.txt  wsgi.py
content/static/css/: qutiiz.css
content/static/images/favicons/: site.webmanifest
content/static/js/: qutiiz.js
content/templates/: 400.html  404.html  500.html  base.html
content/templates/emails/: main.html
content/templates/main/: about.html  contact.html  index.html  project.html  service.html  services.html  showcase.html
main/: admin.py  forms.py  models.py  urls.py  views.py
main/migrations/: 0001_initial.py  0002_service.py  0003_remove_service_icon_alter_service_img.py  0004_alter_service_img.py  0005_alter_service_img.py  0006_alter_service_img.py  0007_service_icon.py  0008_icons_alter_service_icon.py  0009_rename_icons_icon.py  0010_alter_icon_icon_class_alter_icon_name_and_more.py  0011_service_paragraph_1_service_paragraph_2.py  0012_tag.py  0013_tag_arabic_name.py  0014_tag_slug.py  0015_project.py  0016_testmonial.py  0017_alter_testmonial_image.py  0018_alter_testmonial_image.py  0019_alter_service_img_alter_testmonial_image.py  0020_project_paragraph_1_project_paragraph_2.py  0021_projectimage.py  0022_alter_projectimage_options_remove_project_excerpt_and_more.py  0023_newsletter_contacted.py  0024_contact_delete_newsletter.py
main/templatetags/: active_tag.py
wedda/: asgi.py  settings.py  sitemaps.py  urls.py  wsgi.py
