[project]
name = "wedda"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asgiref==3.8.1",
    "django==5.1.2",
    "django-admin-interface==0.29.2",
    "django-colorfield==0.11.0",
    "django-htmx==1.21.0",
    "django-resized>=1.0.3",
    "pillow==11.0.0",
    "python-dotenv>=1.1.0",
    "python-slugify==8.0.4",
    "sqlparse==0.5.3",
    "text-unidecode==1.3",
    "tzdata==2024.2",
]
